deploy/kustomize/base/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rynxs-operator
  namespace: universe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rynxs-operator
  template:
    metadata:
      labels:
        app: rynxs-operator
    spec:
      serviceAccountName: rynxs-operator
      containers:
        - name: operator
          image: ghcr.io/uhudsavasindankacanokcu2/rynxs-operator:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
